# enterprise-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  RECIPES.md  TOOLS_REFERENCE.md
examples/: agent_demo.py  demo_mode.py  incident_response.py  recipes_demo.py  sprint_review.py
src/enterprise_mcp/: __init__.py  audit.py  cache.py  config.py  health.py  observability.py  pagination.py  rate_limiter.py  server.py  tenants.py
src/enterprise_mcp/auth/: __init__.py  oauth.py  token_refresh.py  token_store.py
src/enterprise_mcp/connectors/: __init__.py  base.py  confluence.py  datadog.py  github.py  jira.py  pagerduty.py  slack.py
src/enterprise_mcp/demo/: __init__.py  demo_server.py  mock_connectors.py  mock_data.py
src/enterprise_mcp/plugins/: __init__.py  base.py  loader.py  registry.py
src/enterprise_mcp/plugins/example_plugin/: __init__.py
src/enterprise_mcp/plugins/examples/: __init__.py  notion_plugin.py
src/enterprise_mcp/rag/: __init__.py  embeddings.py  indexer.py  vector_store.py
src/enterprise_mcp/recipes/: __init__.py  base.py
src/enterprise_mcp/recipes/catalog/: __init__.py  bug_triage.py  incident_triage.py  onboarding_checklist.py  pr_review_assistant.py  sprint_review.py  weekly_digest.py
src/enterprise_mcp/tools/: __init__.py  confluence_tools.py  datadog_tools.py  github_tools.py  jira_tools.py  pagerduty_tools.py  recipe_tools.py  registry.py  search_tools.py  slack_tools.py
src/enterprise_mcp/webhooks/: __init__.py  server.py
src/enterprise_mcp/webhooks/handlers/: github.py  jira.py  slack.py
tests/: __init__.py  conftest.py  test_confluence_tools.py  test_github_tools.py  test_jira_tools.py  test_rag.py  test_slack_tools.py
tests/integration/: __init__.py  test_full_agent_loop.py  test_github_integration.py  test_jira_integration.py
tests/load/: __init__.py  test_concurrent_calls.py
tests/unit/: __init__.py
