[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enterprise-mcp-server"
version = "1.0.0"
description = "Enterprise MCP Server for Claude — Jira, GitHub, Confluence, Slack"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Adrien Thomas", email = "adrien@example.com"},
]
keywords = ["mcp", "claude", "anthropic", "enterprise", "jira", "github", "confluence", "slack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.3",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.2",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
enterprise-mcp = "enterprise_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/enterprise_mcp"]

[tool.mypy]
python_version = "3.11"
strict = true
